--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==20.3.0
 cached-property==1.5.2
 certifi==2020.12.5
 chardet==4.0.0
+colorama==0.4.4
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.1.7
@@ -14,12 +15,15 @@ gunicorn==20.0.4
 idna==2.10
 isodate==0.6.0
 lxml==4.6.2
+Pillow==8.2.0
 psycopg2==2.8.6
 python-dotenv==0.17.0
 pytz==2021.1
+qrcode==6.1
 requests==2.25.1
 requests-file==1.5.1
 requests-toolbelt==0.9.1
+segno==1.3.3
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.3
