--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.4
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.1.7
+django-cors-headers==3.7.0
 django-heroku==0.3.1
 django-rest-auth-bearer==0.1.1
 djangorestframework==3.12.2
